<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_piper</name>
  <version>0.1.0</version>
  <description>ROS wrapper for the piper text2speech library</description>
  <maintainer email="support@robotnik.es">Robotnik Automation</maintainer>
  <license>BSD-3-Clause</license>

  <url type="website">https://github.com/RobotnikAutomation/ros_piper</url>
  <url type="repository">https://github.com/RobotnikAutomation/ros_piper.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/ros_piper/issues</url>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>robotnik_common_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
